--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title: Bella Love's Blog
 header-img: img/home-bg.jpg
-email: 
-copyright_name: Your/Project/Corporate Name
+email:
+copyright_name: Bella's Humans
 description: "Write your site description here. It will be used as your sites meta description as well!"
 baseurl: ""
 url: "http://yourdomain.com"
