add fb username

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ baseurl: ""
 url: "http://yourdomain.com"
 twitter_username:
 github_username:
-facebook_username:
+facebook_username: bella.love.988373
 email_username:  your-email@yourdomain.com
 
 # Build settings
