--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
     "name": "clean-blog",
     "title": "Bella Love's Blog",
     "version": "1.0.0",
-    "homepage": "http://startbootstrap.com",
-    "author": "Start Bootstrap",
+    "homepage": "http://bellebearlove.github.io",
+    "author": "Bella",
     "license": {
         "type": "Apache 2.0",
-        "url": "https://github.com/IronSummitMedia/startbootstrap/blob/gh-pages/LICENSE"
+        "url": "https://github.com/bellabearlove/bellabearlove.github.io"
     },
     "devDependencies": {
         "grunt": "~0.4.5",
@@ -17,6 +17,6 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/IronSummitMedia/startbootstrap-clean-blog-jekyll.git"
+        "url": "https://github.com/bellabearlove/bellabearlove.github.io.git"
     }
 }
